--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -38,7 +38,7 @@
 
 p.view-online {
     background: $body-background;
-    color: #ffffff;
+    color: #ccc !important;
     font-size: 11px;
     text-align: center;
     margin-bottom: 5px;
@@ -51,7 +51,7 @@ img.passport-logo {
 .view-online a {
     font-weight: normal;
     text-decoration: underline;
-    color: #ffffff !important;
+    color: #ccc !important;
 }
 
 td {
@@ -163,8 +163,8 @@ table.button table td {
 }
 
 h1 {
-    font-size: 28px;
-    line-height: 32px;
+    font-size: 26px;
+    line-height: 30px;
     color: #005587;
     text-align: center;
 }
